
    use Getopt::Long qw(GetOptionsFromString);
    $ret = GetOptionsFromString($optstring, ...);

  Note that upon completion, no arguments may remain in the string.
  If arguments may remain, call it in list context:

    ($ret, $args) = GetOptionsFromString($optstring, ...);

  @$args will have the remaining arguments.

**************** END EXPERIMENTAL CODE ****************

Changes in version 2.35
-----------------------

* long_prefix_pattern configuration variable.

  prefix_pattern has now been complemented by a new configuration
  option 'long_prefix_pattern' that allows the user to specify what
  prefix patterns should have long option style sematics applied.
  This will enable people to do things like

    foo.pl /option=value

  instead of forcing people to use the short option style

    foo.pl /option value

  This enhancement was suggested and implemented by Yves Orton.

* Bugfix for Ticket #11377 (bug found and fixed by Ryan).
* Bugfix for Ticket #12380.

* Options can take multiple values at once. E.g.,

    --coordinates 52.2 16.4 --rgbcolor 255 255 149

  To handle the above command line, the following call to GetOptions
  can be used:

    GetOptions('coordinates=f{2}' => \@coor, 'rgbcolor=i{3}' => \@color);

  You can specify the minimum and maximum number of values desired.
  The syntax for this is similar to that of regular expression
  patterns: { min , max }. 

Changes in version 2.34
-----------------------

* Auto-vivification of array and hash refs

  If an option is specified to require an array or hash ref, and a
  scalar reference is passed, this is auto-vivified to array or hash
  ref. 

  Example:

	@ARGV = qw(--foo=xx);
	GetOptions("foo=s@", \$var);
	# Now $var->[0] eq "xx"

* Auto-supplied verbose and help options are no longer taken into
  account when determining option ambiguity. This eliminates the
  common problem that you suddenly get an ambiguous option warning